fix border issue on firefox; remove unnecessary space from avatar container; add 3D to education and provide link to portfolio

--- a/src/scss/avatarHolder.scss
+++ b/src/scss/avatarHolder.scss
@@ -9,14 +9,14 @@
 }
 
 .avatar-holder {
-	border: 2px solid black;
-	margin: 10px 0;
 	width: fit-content;
+	display: table;
 }
 
 .avatar {
 	width: auto;
 	height: 300px;
+	vertical-align: middle;
 }
 
 .description {
